# portfolio-site-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  email_html.html  run.sh
.github/workflows/: push-to-registry.yaml  quality-assurance.yaml
src/: main.rs
src/api/v1/: mod.rs  send_email.rs
src/http/: core.rs  http.rs
src/http_server/: constants.rs  macro.rs  mod.rs  request.rs  response.rs  server.rs  util.rs
src/middlewares/: cors.rs
