[package]
name = "portfolio-site-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"

[dependencies]
chrono = "0.4.39"
httparse = "1.10.0"
mail-send = "0.5.0"
once_cell = "1.20.3"
regex = "1.11.1"
rustls = { version = "0.23.23", features = ["ring"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.0"
strum_macros = "0.27.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-rustls = "0.26.2"
url = "2.5.4"
